--- a/main-page/search_result.css
+++ b/main-page/search_result.css
@@ -1,10 +1,11 @@
 body {
     font-family: 'Lato';
-    background-color:  rgba(150, 159, 170, 0.47);
+
 }
 
 nav {
     background-color: #343F4B;
+    max-height: 62px;
 }
 
 .navbar-nav{
@@ -16,12 +17,20 @@ nav a img {
     filter: invert(1);
 }
 
+#page-container{
+    position: relative;
+    min-height: 100vh;
+    background-color:  rgba(150, 159, 170, 0.47);
+    padding-bottom: 256px;
+}
 #search-result-container{
     background-color: white;
     border-radius: 10px;
     margin: 2rem auto;
     padding: 10px;
     width: 60%;
+    min-height: 100px;
+    overflow: hidden;
 }
 
 .see-more{
